# SoftwareManager-CLI

./: Cargo.toml  README.md
src/: main.rs
