[package]
name = "rust_reqwests"
version = "0.1.0"
edition = "2024"

[dependencies]
aria2-ws = "0.5.1"
dialoguer = { version = "0.12.0", features = ["fuzzy-select"] }
futures = "0.3.31"
reqwest = { version = "0.12", features = ["json"] }
select = "0.6.1"
serde = "1.0.228"
serde_json = "1.0.145"
time = "0.3.44"
tokio = { version = "1", features = ["full"] }
